Fixed: In "Friction Tab", remove the Force Vectors radio buttons and replace with just checkbox for vectors as in 1st tab.
Fixed: "Force Vectors" checkbox is buggy--the vectors only appear to listen to the box state when the object moves.
Moved the ramp angle readout to the right so that it is not directly under "meters" text, and beyond the Applied Force text box so that these don't get confused.
# 1.03.78 (43921) Sep 9, 2010
Fixed: In the game modes, the house is floating
Fixed: Return object button doesn't work after launching an object off the ramp and crashing it
# 1.03.77 (43917) Sep 9, 2010
Removed unused images
Fixed odd layout of Friction control panel
Added a sound on/off control
Fixed: gravity force slider is broken
Added a friction tab to Ramp:Forces and Motion
# 1.03.76 (43868) Sep 8, 2010
Fixed: When paused and changing the angle of the ramp, vectors do not update
Fixed: FBD vector arrows don't originate at the origin, especially on resize of the FBD dialog
Fixed: Applied force vector doesn't update when the sim is paused
Changed to idiomatic scala setter from javabean style setter in Vector2DModel
Refactored MotionSeriesObject to use MutableDouble instead of immutable State
Fixed: vectors are incorrect on initialization
Refactored MotionSeriesObject model startup sequence
Performance improvement: skip expensive updates to VectorNode when possible
Refactored MotionSeriesObject to use explicit Vector2DModel paradigm instead of lazy computation paradigm
Merged ForceMotionSeriesObject into MotionSeriesObject
Performance improvement and minor refactoring in model
Removed colons after friction coefficients
Converted bouncy property to MutableBoolean
Converted frictionless property to MutableBoolean
Converted wall property to MutableBoolean
# 1.03.75 (43609) Aug 28, 2010
Temporarily reduced DT in order to test animation smoothness issues
Added experimental support for active rendering (commented out)
Changed "object stuck" timeout from 5 sec to 1 sec