@@ -1,3 +1,4 @@
+Fixed: When sim is paused, dragging the "object position" slider causes incorrect normal force to point straight up.
 Fixed: In "Friction Tab", remove the Force Vectors radio buttons and replace with just checkbox for vectors as in 1st tab.
 Fixed: "Force Vectors" checkbox is buggy--the vectors only appear to listen to the box state when the object moves.
 Moved the ramp angle readout to the right so that it is not directly under "meters" text, and beyond the Applied Force text box so that these don't get confused.
